// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChipGroup chip group default 1`] = `
<ul
  className="pf-c-chip-group"
>
  <InnerChipGroup
    className=""
    collapsedText="\${remaining} more"
    defaultIsOpen={false}
    expandedText="Show Less"
    isOpen={false}
    numChips={3}
    onToggleCollapse={[Function]}
    withToolbar={false}
  >
    <Component>
      1.1
    </Component>
  </InnerChipGroup>
</ul>
`;

exports[`ChipGroup chip group with toolbar 1`] = `
<ContextProvider
  value="h4"
>
  <InnerChipGroup
    className=""
    collapsedText="\${remaining} more"
    defaultIsOpen={false}
    expandedText="Show Less"
    isOpen={false}
    numChips={3}
    onToggleCollapse={[Function]}
    withToolbar={true}
  >
    <Component>
      <Component>
        1.1
      </Component>
    </Component>
  </InnerChipGroup>
</ContextProvider>
`;
